kubernetes/istio/gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      name: http
      number: 80
      protocol: HTTP
    hosts:
      - "argocd.internal.navanin.tech"
      - "longhorn.internal.navanin.tech"
      - "vault.internal.navanin.tech"
