kubernetes/istio/vs-argocd.yaml

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-vservice
  namespace: argocd
spec:
  gateways:
  - istio-system/gateway
  hosts:
  - "argocd.internal.navanin.tech"
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: argocd-server
        port:
          number: 80
